--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>hello coursera!</title>
 </head>
 <body>
-<h1>hello coursera!</h1>
+<h1>hello coursera! IT'S A GREAT COURSE!</h1>
 </body>
 </html>
